# grade-work

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  sample_products.csv  test_imports.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py
config/: settings.py
docs/: architecture.rst  conf.py  getting-started.rst  index.rst
docs/api/: application.rst  domain.rst  infrastructure.rst  presentation.rst
scripts/: seed_data.py
src/app/: di.py  main.py
src/app/application/: dto.py  interactors.py  ports.py  queries.py
src/app/domain/: entities.py  exceptions.py  ports.py  value_objects.py
src/app/infrastructure/: email.py  image.py  search.py  security.py  sitemap.py
src/app/infrastructure/persistence/: database.py  mappers.py  models.py  repositories.py  unit_of_work.py
src/app/infrastructure/utils/: base64_utils.py  csv_importer.py  json_yaml_converter.py  string_utils.py
src/app/presentation/: dependencies.py  middleware.py  schemas.py
src/app/presentation/api/: auth.py  cart.py  categories.py  orders.py  products.py  utils.py
tests/: test_integration.py  test_utils.py  test_value_objects.py
